<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Poker App</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="startgame">Start Game</string>
    <string name="send_msg">Send msg</string>

    <string name="start_as_client">Start as Client</string>
    <string name="start_as_server">Start as Server</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="find_servers">Find servers</string>
    <string name="poker_rooms">Poker rooms</string>
    <string name="disconnected">Disconnected</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="stand">Are you sure you want to stand from the table?</string>
    <string name="table_full_dialog_title">Table full</string>
    <string name="table_full_dialog_msg">The table you tried to connect to is full. Try again later.</string>
    <string name="amount_icon">amount_icon</string>
    <string name="bid">bid</string>
    <string name="min">min</string>
    <string name="username_dialog_message">Please enter your name</string>
    <string name="username_dialog_title">Username</string>
    <string name="hello">Hello</string>
    <string name="wifi_off">WiFi is turned off. You have to turn it on.</string>
    <string name="wifi_disconnected">WiFi got disconnected. Turn it on and reconnect to the server.</string>
    <string name="game_started">Game started</string>
    <string name="folded">folded</string>
    <string name="called">called</string>
    <string name="checked">checked</string>
    <string name="raised">raised to</string>
    <string name="all_in">went all-in</string>
    <string name="won">won</string>
    <string name="press_start">Press Start button to start new round</string>
    <string name="room">ROOM-</string>
    
    <string name="about_info">This app presents use of the AllShare and Chord libraries. Its source code can be found on Samsung Developer site: http://developer.samsung.com</string>
    <string name="license_info">This app makes use of Otto event bus which is published under the Apache 2.0 License. More information can be found here http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="searching_for_rooms">searching&#8230;</string>
    <string name="all_share_dialog_message">The S Poker requires TV with AllShare Cast functionality.\n\nPress OK and connect with TV to play the game.\n\nThis dialog will be automatically dismissed after the connection is established.</string>
    <string name="all_share_dialog_exit">Exit</string>
    <string name="no_all_share_cast_dialog">Your device doesn\'t support AllShare Cast functionality.\n\nYou can always connect as client.</string>
    
</resources>
